Moved help command to common package